--- a/style.css
+++ b/style.css
@@ -5,11 +5,21 @@
 
 }
 
+.logo{
+    position: fixed;
+    height: 350px;
+    left: 0px;
+    width: 400px;
+
+}
+
+
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)),url(images/banner\(3\).png);
+    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)),url(images/abstract-white-transparent-waves-in-motion-at-the-top-and-bottom-on-gradient-blue-background-loop-animation_4vowt3ocg__F0000.png);
 }
+
 nav{
     display: flex;
     padding: 2% 6%;
@@ -31,12 +41,12 @@ nav{
 .nav-links ul li a{
     color: #fff;
     text-decoration: none;
-    font-size: 30px;
+    font-size: 25px;
 }
 .nav-links ul li::after{
     content: '';
     width: 0%;
-    height: 2px;
+    height: 4px;
     background: #42B9F8;
     display: block;
     margin: auto;
@@ -44,6 +54,8 @@ nav{
 .nav-links ul li:hover::after{
     width: 100%;
 }
+
+
 .text-box{
     width: 57%;
     color: #fff;
@@ -54,7 +66,7 @@ nav{
     text-align: center;
 }
 .text-box h1{
-    font-size: 56px;
+    font-size: 40px;
 }
 .text-box p{
     margin: 10px 0 40px;
@@ -67,7 +79,7 @@ nav{
     color: #fff;
     border: 1px solid #fff;
     padding: 12px 34px;
-    font-size: 20px;
+    font-size: 50px;
     background: transparent;
     position: relative;
     cursor: pointer;
@@ -82,6 +94,32 @@ nav{
 nav .fa{
     display: none;
 }
+.submenu {
+    display: none;
+    position: absolute;
+    background-color: transparent;
+    padding: 10px;
+}
+
+.nav-links li:hover .submenu {
+    display: block;
+}
+
+.submenu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.submenu ul li {
+    padding: 5px 0;
+}
+
+.submenu ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
 @media(max-width: 700px){
     .text-box h1{
         font-size: 20px;
@@ -113,7 +151,7 @@ nav .fa{
     }
 }
 
-.services{
+/*.services{
     width: 57%;
     margin: auto;
     text-align: center;
@@ -186,4 +224,5 @@ p{
     display: flex;
     justify-content: space-between;
 }
+
 
